# kanban-be

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  STEP_2_COMPLETE.md  STEP_3_COMPLETE.md  docker-compose-ssl.yml  docker-compose.yml  kanban_db.sql  nginx.conf  test-db.sh  test_api.sh
.github/workflows/: prod.yml
src/: config.rs  database.rs  main.rs
src/handlers/: auth.rs  file.rs  health.rs  mod.rs  task.rs
src/middleware/: mod.rs
src/models/: auth.rs  file.rs  mod.rs  task.rs
src/services/: mod.rs
src/utils/: errors.rs
