[package]
name = "kanban-be"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A kanban board backend system built with Rust and Actix-web"

[dependencies]
# Web framework
actix-web = "4.8"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Cloudinary
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# File handling
mime = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# OpenAPI/Swagger documentation
utoipa = { version = "5.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# Configuration
config = "0.14"
